# huion-keydial-mini-rust

./: Cargo.toml  README.md
crates/huion-config/: Cargo.toml
crates/huion-config/src/: lib.rs
crates/huion-driver/: Cargo.toml
crates/huion-driver/src/: bluetooth.rs  hid.rs  main.rs  uinput.rs  window.rs
crates/huion-gui/: Cargo.toml  tauri.conf.json
crates/huion-gui/frontend/: app.js  index.html  style.css
crates/huion-gui/src/: lib.rs  main.rs
src/: bluetooth.rs  config.rs  main.rs  window.rs
