[package]
name = "huion-keydial-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
evdev = "0.12"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
dirs = "6"
