[package]
name = "huion-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
huion-config = { path = "../huion-config" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
dirs = "6"

[build-dependencies]
tauri-build = "2"
